# dagster-data-pipeline

./: Dockerfile  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
.devcontainer/: devcontainer.json
data_pipeline/: __init__.py  pyproject.toml
data_pipeline/assets/drupal/: bronze.py  silver.py
data_pipeline/assets/ga/: assets.py
data_pipeline/assets/lumos/: assets.py
data_pipeline/data_pipeline/: __init__.py
data_pipeline/data_pipeline/assets/drupal/: drupal_bt.py
data_pipeline/data_pipeline/assets/ga/: assets.py
data_pipeline/data_pipeline/assets/lumos/: assets.py
